--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -212,8 +212,8 @@ jhipster:
 minio:
    server:
       url: http://dev.servers.divisosofttech.com:9000
-      accessKey: WLHLFKMIFZFUE48YPT35
-      secretKey: o+3a1dg+GdhDtewYn1fWWXvnMQjbO+V+pY+Ommyi
+      accessKey: R0WPNXCYE0OUI134W1GD
+      secretKey: E7jCb+99h1xYy84QoDpqm1aITTGt7gRJp8gv73uw
    buckets:
       store: graeshoppe-store-images
       banner: graeshoppe-banner-images
