elastic settings and mappings included

--- a/src/main/resources/mappings/storemappings.json
+++ b/src/main/resources/mappings/storemappings.json
@@ -5,7 +5,12 @@
                 "type": "text",
                 "analyzer": "index_analyzer",
   				"search_analyzer": "simple"
-            }
+            },
+                    "location": {
+                        "type": "geo_point"
+                        
+           
+                    }
         }
     }
 }
