--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -24,13 +24,17 @@ eureka:
     prefer-ip-address: true
   client:
     service-url:
-      defaultZone: http://admin:${jhipster.registry.password}@localhost:8761/eureka/
+      defaultZone: http://admin:${jhipster.registry.password}@dev.servers.divisosofttech.com:8761/eureka/
 
 management:
   metrics:
     export:
       prometheus:
         enabled: false
+
+  health:
+    elasticsearch:
+      enabled: false
 
 spring:
   devtools:
@@ -40,9 +44,9 @@ spring:
       enabled: false
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:mysql://localhost:3306/store?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true
+    url: jdbc:mysql://35.184.238.164:3306/store?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true
     username: root
-    password:
+    password: root
     hikari:
       poolName: Hikari
       auto-commit: false
@@ -72,12 +76,20 @@ spring:
       hibernate.cache.use_minimal_puts: true
       hibernate.cache.hazelcast.use_lite_member: true
   data:
+    elasticsearch:
+      cluster-name: f057137f46ef42e7a1e4a3b54e1a2549
+      cluster-nodes: https://f057137f46ef42e7a1e4a3b54e1a2549.us-central1.gcp.cloud.es.io:9243/
+      properties:
+        path:
+          logs: target/elasticsearch/log
+          data: target/elasticsearch/data
+          home: target/elasticsearch
+          
     jest:
-      uri: http://localhost:9200
-  # see https://docs.spring.io/spring-boot/docs/current/reference/html/boot-features-nosql.html#boot-features-connecting-to-elasticsearch-jest
-  elasticsearch:
-    rest:
-      uris: http://localhost:9200
+      password: fxD0M3o0VlOpcvRqcEYmPtzP
+      username: elastic
+      readTimeout: 10000
+      uri: https://f057137f46ef42e7a1e4a3b54e1a2549.us-central1.gcp.cloud.es.io:9243/
   # Replace by 'prod, faker' to add the faker context and have sample data loaded in production
   liquibase:
     contexts: prod
